Fix top spacing on jam page

--- a/app/styles/jam.css
+++ b/app/styles/jam.css
@@ -142,7 +142,7 @@ html {
 
 @screen md {
   .letter-of-intent {
-    padding-top: 810px;
+    padding-top: 480px;
   }
 
   .letter-of-intent-container {
